Update and rename 2.When_should_you_use_it.md to 2.When_should_use_Auth_Code_Flow.md

--- a/Web Security: OAuth and OpenID Connect/4.Grant_type:Authorization_code/2.When_should_use_Auth_Code_Flow.md
+++ b/Web Security: OAuth and OpenID Connect/4.Grant_type:Authorization_code/2.When_should_use_Auth_Code_Flow.md
@@ -1,10 +1,11 @@
 ## Athorization Code FLow use cases
 
 #### First need to answer the Key Questions
-- Are you authorizing on behalf of a user ?
-- Does the system in question have a web browser available ?
-- Is the application entirely server side, or does it have a client-side component ?
-  ![oauth_grant_types_choose](https://github.com/L37sg0/l34rn1n6/assets/20823029/cbbe1277-888e-4e78-95ed-c93a908d149a)
+- Are you authorizing on behalf of a user ? - Yes
+- Does the system in question have a web browser available ? - Yes
+- Is the application entirely server side, or does it have a client-side component ? - No
+  ![oauth_grant_types_choose_Auth_Code_Flow](https://github.com/L37sg0/l34rn1n6/assets/20823029/e91c6791-002b-4120-8f46-d2ae7d2b59f8)
+
 ![auth_code_flow](https://github.com/L37sg0/l34rn1n6/assets/20823029/24dc355c-ae16-4fb8-a000-2b2a147d7240)
 
 #### Requirements:
