--- a/GettingStartedWithLinux/1.IntroductionToLinux/2.LinuxFundamentals/8.Planning_your_system.md
+++ b/GettingStartedWithLinux/1.IntroductionToLinux/2.LinuxFundamentals/8.Planning_your_system.md
@@ -39,9 +39,9 @@
  
 ## Distro-Specific Courses
 - [Learning Ubuntu Dektop](https://www.linkedin.com/learning/learning-ubuntu-desktop-18015807)
-- [Learning Fedora Linux]()
+- [Learning Fedora Linux](https://www.linkedin.com/learning/learning-fedora-linux-2)
 - [Learning CenOS Linux](https://www.linkedin.com/learning/learning-centos-linux-2)
-- [Learning Kali Linux](https://www.linkedin.com/learning/introduction-to-kali-linux-and-windows-subsystem-for-linux)
+- [Learning Kali Linux](https://www.linkedin.com/learning/kali-linux-essential-training)
 - [Learning Ubuntu Server](https://www.linkedin.com/learning/building-an-ubuntu-server)
 
 ## Cloud Services
@@ -57,4 +57,4 @@
 - Easily create a Linux VM on a Windows 10 system
   - Many distros available in the Microsoft Store
   - Ideal for shell access
-- Learn more in [Learning Windows Subsystem for Linux](https://www.linkedin.com/learning/introduction-to-kali-linux-and-windows-subsystem-for-linux)
+- Learn more in [Learning Windows Subsystem for Linux](https://www.linkedin.com/learning/learning-windows-subsystem-for-linux-16134127)
