--- a/GettingStartedWithLinux/2.Building_an_Ubuntu_server/1.Planning_and_basic_setup/2.Creating_installation_media.md
+++ b/GettingStartedWithLinux/2.Building_an_Ubuntu_server/1.Planning_and_basic_setup/2.Creating_installation_media.md
@@ -2,3 +2,4 @@
 - Use tools to build bootable flash drive with Ubuntu
   - [Windows tool](https://rufus.ie/en/)
   - [Linux tool](https://ubuntu.com/tutorials/create-a-usb-stick-on-ubuntu#3-launch-startup-disk-creator)
+  - [Mac OS tool](https://support.apple.com/en-us/101578)
