--- a/GettingStartedWithLinux/2.Building_an_Ubuntu_server/1.Planning_and_basic_setup/3.Installing_Ubuntu_server.md
+++ b/GettingStartedWithLinux/2.Building_an_Ubuntu_server/1.Planning_and_basic_setup/3.Installing_Ubuntu_server.md
@@ -5,3 +5,4 @@
 - register to any hosting provider
   - [DigitalOcean](https://cloud.digitalocean.com/registrations/new) - **200$ credit for 60 days**
   - [Hetzner](https://www.hetzner.com/cloud/)
+## [Install Ubuntu Server](https://ubuntu.com/tutorials/install-ubuntu-server#1-overview)
