--- a/GettingStartedWithLinux/2.Building_an_Ubuntu_server/1.Planning_and_basic_setup/1.Planning_your_server.md
+++ b/GettingStartedWithLinux/2.Building_an_Ubuntu_server/1.Planning_and_basic_setup/1.Planning_your_server.md
@@ -1,3 +1,5 @@
+![Ubuntu](https://img.shields.io/badge/Ubuntu-E95420?style=for-the-badge&logo=ubuntu&logoColor=white)
+![LinkedIn](https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white)
 ## Production or Home Server
 - What roles will it provide, and what hardware is needed to support them?
 - Consider buying new hardware.
