--- a/GettingStartedWithLinux/2.Building_an_Ubuntu_server/1.Planning_and_basic_setup/2.Creating_installation_media.md
+++ b/GettingStartedWithLinux/2.Building_an_Ubuntu_server/1.Planning_and_basic_setup/2.Creating_installation_media.md
@@ -1,3 +1,5 @@
+![Ubuntu](https://img.shields.io/badge/Ubuntu-E95420?style=for-the-badge&logo=ubuntu&logoColor=white)
+![LinkedIn](https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white)
 - [Download Ubuntu Server](https://ubuntu.com/download/server)
 - Use tools to build bootable flash drive with Ubuntu
   - [Windows tool](https://rufus.ie/en/)
