--- a/GettingStartedWithLinux/2.Building_an_Ubuntu_server/1.Planning_and_basic_setup/4.Accessing_your_server_through_ssh.md
+++ b/GettingStartedWithLinux/2.Building_an_Ubuntu_server/1.Planning_and_basic_setup/4.Accessing_your_server_through_ssh.md
@@ -1,3 +1,5 @@
+![Ubuntu](https://img.shields.io/badge/Ubuntu-E95420?style=for-the-badge&logo=ubuntu&logoColor=white)
+![LinkedIn](https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white)
 ## Remote Access with SSH
 - Secure Shell `SSH` allows us to access a system via the network
 - `SSH` provides a text-based shell session we can use to administer the server
