--- a/GettingStartedWithLinux/2.Building_an_Ubuntu_server/2.System_Management/2.System_and_hardware_information.md
+++ b/GettingStartedWithLinux/2.Building_an_Ubuntu_server/2.System_Management/2.System_and_hardware_information.md
@@ -1,3 +1,5 @@
+![Ubuntu](https://img.shields.io/badge/Ubuntu-E95420?style=for-the-badge&logo=ubuntu&logoColor=white)
+![LinkedIn](https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white)
 ## System and hardware information
 
 ### Hardware information
