--- a/GettingStartedWithLinux/2.Building_an_Ubuntu_server/2.System_Management/3.Managing_software_with_APT.md
+++ b/GettingStartedWithLinux/2.Building_an_Ubuntu_server/2.System_Management/3.Managing_software_with_APT.md
@@ -1,3 +1,5 @@
+![Ubuntu](https://img.shields.io/badge/Ubuntu-E95420?style=for-the-badge&logo=ubuntu&logoColor=white)
+![LinkedIn](https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white)
 ## `APT` package Manager
 - Ubuntu uses `APT` for package management.
 - `APT` interacts with `dpkg` for package installation tasks.
