--- a/GettingStartedWithLinux/1.IntroductionToLinux/1.Introdcution.md
+++ b/GettingStartedWithLinux/1.IntroductionToLinux/1.Introdcution.md
@@ -1,3 +1,5 @@
+![Linux](https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black)
+![LinkedIn](https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white)
 ## Linux
 - The name given to operating systems that are build around the opwn-source Linux kernel,
 in addition to other common tools, such as the GNU coreutils or BusyBox
