--- a/GettingStartedWithLinux/1.IntroductionToLinux/2.LinuxFundamentals/3.Standard_tools.md
+++ b/GettingStartedWithLinux/1.IntroductionToLinux/2.LinuxFundamentals/3.Standard_tools.md
@@ -1,3 +1,5 @@
+![Linux](https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black)
+![LinkedIn](https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white)
 ## Software on Linux
 - GNU coreutils: cp, mv, chmod
 - Other software
