--- a/GettingStartedWithLinux/1.IntroductionToLinux/2.LinuxFundamentals/4.Software_and_packages.md
+++ b/GettingStartedWithLinux/1.IntroductionToLinux/2.LinuxFundamentals/4.Software_and_packages.md
@@ -1,3 +1,5 @@
+![Linux](https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black)
+![LinkedIn](https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white)
 ## Adding Software to your Linux System
 - Find and install software in distribution repositories.
 - Repositories are collections of software packages.
