--- a/GettingStartedWithLinux/1.IntroductionToLinux/2.LinuxFundamentals/6.User_and_system_security.md
+++ b/GettingStartedWithLinux/1.IntroductionToLinux/2.LinuxFundamentals/6.User_and_system_security.md
@@ -1,3 +1,5 @@
+![Linux](https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black)
+![LinkedIn](https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white)
 ## Use Accounts on Linux
 - Standart users
   - Human users and programs or services can have their own account
