--- a/GettingStartedWithLinux/1.IntroductionToLinux/2.LinuxFundamentals/7.Choosing_a_Linux_distribution.md
+++ b/GettingStartedWithLinux/1.IntroductionToLinux/2.LinuxFundamentals/7.Choosing_a_Linux_distribution.md
@@ -1,3 +1,5 @@
+![Linux](https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black)
+![LinkedIn](https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white)
 ## Distributions
 - Kind of like different flavours of the operation system
 - They all include the linux kernel.
