--- a/GettingStartedWithLinux/1.IntroductionToLinux/2.LinuxFundamentals/8.Planning_your_system.md
+++ b/GettingStartedWithLinux/1.IntroductionToLinux/2.LinuxFundamentals/8.Planning_your_system.md
@@ -1,3 +1,5 @@
+![Linux](https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black)
+![LinkedIn](https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white)
 ## Planning Your System
 1. Decide what your learning goal is.
 2. Decide which distro supports that goal.
