--- a/GettingStartedWithLinux/1.IntroductionToLinux/3.Developing_knowledge/2.Finding_and_asking_for_help.md
+++ b/GettingStartedWithLinux/1.IntroductionToLinux/3.Developing_knowledge/2.Finding_and_asking_for_help.md
@@ -1,3 +1,5 @@
+![Linux](https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black)
+![LinkedIn](https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white)
 ## Finding Help
 - Consult the manual(manpages)
   - In a shell type `man` and the name of a command
