--- a/GettingStartedWithLinux/2.Building_an_Ubuntu_server/2.System_Management/9.Resource_management.md
+++ b/GettingStartedWithLinux/2.Building_an_Ubuntu_server/2.System_Management/9.Resource_management.md
@@ -4,7 +4,9 @@
 - Storage usage
 - Finite resources that need to be managed
 - Insufficient resources can cause problems
+- Use programs like `top` or `htop` to monitor resources
 
 ## Htop `htop`
+
 - `?` for description
 - 
