--- a/GettingStartedWithLinux/2.Building_an_Ubuntu_server/3.Storage/1.Adding_a_disk.md
+++ b/GettingStartedWithLinux/2.Building_an_Ubuntu_server/3.Storage/1.Adding_a_disk.md
@@ -1,2 +1,27 @@
 ![Ubuntu](https://img.shields.io/badge/Ubuntu-E95420?style=for-the-badge&logo=ubuntu&logoColor=white)
 ![LinkedIn](https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white)
+
+## First
+- Add the disk
+- use `lsblk` to show block devices and check if system recognises the new device
+- use `sudo lshw -businfo -c disk` to see which particular disk is associated with which particular name
+
+## Create partitions on the new disk
+- create a partition on the new disk `sudo fdisk </dev/sda>`
+  - use program help to follow what need to be done
+  - changes remain in memory untill you confirm them
+- after chages being applied you'll be able to see your disk and its partitions with `lsblk`
+
+## Create a file system on the disk
+- identify partition name on which you want to create a file system with `lsblk`
+- use `sudo mkfs.ext4 </dev/sda>` to create an `ext4` file system on selected partition
+
+## Mount your new files system
+- create new mounting directory `sudo mkdir </mnt/storage>`
+- now mount new disk to existing file system `sudo mount </dev/sda1> </mnt/storage>`
+- finaly check with `df -h` that the new disk is available.
+
+**Disks are usualy monted by `root`, which means only root have read,write and execute rights on them**
+
+## Change permissions of the new disk
+- `sudo chmod <777> </mnt/storage>`
