--- a/GettingStartedWithLinux/2.Building_an_Ubuntu_server/3.Storage/1.Adding_a_disk.md
+++ b/GettingStartedWithLinux/2.Building_an_Ubuntu_server/3.Storage/1.Adding_a_disk.md
@@ -10,6 +10,22 @@
 - create a partition on the new disk `sudo fdisk </dev/sda>`
   - use program help to follow what need to be done
   - changes remain in memory untill you confirm them
+  - **example**
+  ```bash
+  n # creates new partition
+
+  Partition type:
+   p   primary (1 primary, 0 extended, 3 free)
+   e   extended (container for logical partitions)
+  Select (default p):  p
+
+  Partition number (1-4, default 2): 2
+  First sector (499712-488397134, default 499712): # press Enter
+  Last sector, +sectors or +size{K,M,G,T,P} (499712-488397134, default 488397134): +1T # will create 1TB partition
+
+  # write changes with:
+  w
+  ```
 - after chages being applied you'll be able to see your disk and its partitions with `lsblk`
 
 ## Create a file system on the disk
