--- a/GettingStartedWithLinux/2.Building_an_Ubuntu_server/3.Storage/1.Adding_a_disk.md
+++ b/GettingStartedWithLinux/2.Building_an_Ubuntu_server/3.Storage/1.Adding_a_disk.md
@@ -15,8 +15,8 @@
   n # creates new partition
 
   Partition type:
-   p   primary (1 primary, 0 extended, 3 free)
-   e   extended (container for logical partitions)
+   p   primary (1 primary, 0 extended, 3 free) # Use primary only if you're adding a disk which need to have OS on it
+   e   extended (container for logical partitions) # In all other cases create 1 extended partition over all space and add logical partitions on it
   Select (default p):  p
 
   Partition number (1-4, default 2): 2
