--- a/GettingStartedWithLinux/2.Building_an_Ubuntu_server/3.Storage/4.Mounting_disks_automatically.md
+++ b/GettingStartedWithLinux/2.Building_an_Ubuntu_server/3.Storage/4.Mounting_disks_automatically.md
@@ -5,4 +5,13 @@
 - The system can automatically make disks available at boot time.
 - Settings for disk mounting are found in the file system table at `/etc/fstab`.
 - The `fstab` file contains options similar to what are used when manually mounitng a file system.
-- to find the UUID of a partition use `blkid`
+- to find the UUID of a partition use `sudo blkid`
+- if already mounted partitions manually use `df -h` to see where are mounted
+- then open `/etc/fstab` and add a line for each partition you want to be auto-mounted
+- **example**
+  ```bash
+  # /dev/nvme1n1p5 for containers
+  UUID=1f25f909-51e5-4a47-b7f4-1185554a0b5f /var/lib/docker ext4 defaults 0 2
+  ```
+- save file and close
+- check for mounting errors with `sudo mount -a`
